--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .cabecalho {
-    background-color: #51025a;
+    background-color: #51025a; 
     color: white;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
-
