--- a/style.css
+++ b/style.css
@@ -4,5 +4,10 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 100px 0
+    padding: 24px 0;
+}
+
+.cabecalho-lista-item{
+    display: inline-block;
+
 }
