--- a/style.css
+++ b/style.css
@@ -39,3 +39,19 @@
     background-color: black;
 }
 
+.curso{
+    background-image: linear-gradient(#51025a, #e85cda64);
+    color:white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+}
+    
+.curso-div-conteudo{
+width: 35%;
+}
+.curso-titulo{
+padding: 24px 0;
+}
+
